test/libhyperion/syntaxTests/iceRegressionTests/calling_external_function_via_parameter_with_invalid_type.hyp
contract C {
    function f(
        function() external returns (function() internal) getCallback
    ) public {
        getCallback();
    }
}
// ----
// TypeError 4889: (37-98): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
